--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,58 @@
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100 vh; */
+
+}
+
+.trafficTop{
+    display: flex;
+    justify-content: center;
+}
+
+.trafficSupport{
+    width: 50px;
+    height: 100px;
+    background-color: black;
+    
+}
+
+.trafficLight{
+    width: 150px;
+    height: 400px;
+    border-radius: 15px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.light{
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
+}
+.red{
+    
+    background-color: red;
+}
+
+.yellow{
+    
+    background-color: yellow;
+}
+
+.green{
+    
+    background-color: green;
+}
+
+.on{
+    box-shadow: 0 0 50px white;
+}
+
 
 /* 
 
